{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 1,
  "lineage": "a86bf619-11b1-7e1d-5c30-481c6eec6095",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "ec2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:145628923514:targetgroup/ClienteA-tg/ec76187246e6de2e-20231114185731465300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:targetgroup/ClienteA-tg/ec76187246e6de2e",
            "target_id": "172.31.45.243"
          },
          "dependencies": [
            "aws_instance.webserver",
            "aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:145628923514:instance/i-052c3d7e1b5f1bc6b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052c3d7e1b5f1bc6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cliente-A",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042af4e8919e32d59",
            "private_dns": "ip-172-31-45-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.243",
            "public_dns": "ec2-3-80-185-213.compute-1.amazonaws.com",
            "public_ip": "3.80.185.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d91ff2cf7aba1f16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "open-ssh-http"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e90debcbd2e5cf13",
            "tags": {
              "Name": "Cliente A WebApp"
            },
            "tags_all": {
              "Name": "Cliente A WebApp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1555c717c96bf95"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:loadbalancer/app/ClienteA-alb/51c580bd92a81d3a",
            "arn_suffix": "app/ClienteA-alb/51c580bd92a81d3a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ClienteA-alb-875770955.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:145628923514:loadbalancer/app/ClienteA-alb/51c580bd92a81d3a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ClienteA-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c1555c717c96bf95"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0594db4b75e15b5aa"
              },
              {
                "subnet_id": "subnet-0e90debcbd2e5cf13"
              }
            ],
            "subnets": [
              "subnet-0594db4b75e15b5aa",
              "subnet-0e90debcbd2e5cf13"
            ],
            "tags": {
              "Name": "ClienteA-alb"
            },
            "tags_all": {
              "Name": "ClienteA-alb"
            },
            "vpc_id": "vpc-0a1541057fbc156f3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:listener/app/ClienteA-alb/51c580bd92a81d3a/4c141693a8dceebd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145628923514:listener/app/ClienteA-alb/51c580bd92a81d3a/4c141693a8dceebd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:loadbalancer/app/ClienteA-alb/51c580bd92a81d3a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:listener/app/ClienteA-alb/51c580bd92a81d3a/59d22f55d7cee823",
            "certificate_arn": "arn:aws:acm:us-east-1:145628923514:certificate/b71fb968-dcde-404f-860b-e5f49b10cce9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:targetgroup/ClienteA-tg/ec76187246e6de2e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145628923514:listener/app/ClienteA-alb/51c580bd92a81d3a/59d22f55d7cee823",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:loadbalancer/app/ClienteA-alb/51c580bd92a81d3a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_load_balancer",
            "aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:145628923514:targetgroup/ClienteA-tg/ec76187246e6de2e",
            "arn_suffix": "targetgroup/ClienteA-tg/ec76187246e6de2e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:145628923514:targetgroup/ClienteA-tg/ec76187246e6de2e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ClienteA-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1541057fbc156f3"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}